<resources>
    <string name="app_name">Foxy</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="cancel">Cancel</string>
    <string name="No_internet_connection">You are not connected to internet :(</string>
    <string name="Ok">OK</string>
    <string name="Profile">Profile</string>
    <string name="Search">Discover</string>
    <string name="slogan" translatable="false">Are you ready for this ?</string>
    <string name="Money">Money</string>
    <string name="Ranking">Ranking</string>
    <string name="My_challenges">My challenges</string>
    <string name="Undefined_error">Undefined error</string>
    <string name="Add_a_card">Add a card</string>
    <string name="Connect_with_stripe">Connect with Stripe</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login">Login</string>
    <string name="Forgot_your_password">Forgot your password ?</string>
    <string name="Create_your_account">Create your account</string>
    <string name="Continue_with_Facebook">Continue with facebook</string>
    <string name="Register">Register</string>
    <string name="Confirm_password">Confirm your password</string>
    <string name="error_form">Please complete all fields</string>
    <string name="Notification">Notification</string>
    <string name="New_Notification">Notification from %1$s</string>
    <string name="Friends">Friends</string>
    <string name="Title">Title</string>
    <string name="Content">Content</string>
    <string name="Next">Next</string>
    <string name="Success">Success</string>
    <string name="Settings">Settings</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core functionality.</string>
    <string name="You_dont_have_friends">You don\'t have friends</string>
    <string name="Logout">Logout</string>
    <string name="You_dont_have_notifications">You don\'t have notifications</string>
    <string name="Achievements">Achievements</string>
    <string name="Notifications">Notifications</string>
    <string name="Send_notification">Send notification</string>
    <string name="Add_picture_from_camera">Add picture from camera</string>
    <string name="Add_picture_from_library">Add picture from library</string>
    <string name="Cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="Not_available">Not available</string>
    <string name="session_expired_message">Your session has expired, please logout.</string>
    <string name="Username">Username</string>
    <string name="First_name">First name</string>
    <string name="Age">Age</string>
    <string name="Birthday">Birthday</string>
    <string name="Last_name">Last name</string>
    <string name="placeholder_name" translatable="false">%1$s %2$s</string>
    <string name="email_confirmation_sent">A confirmation email has been sent, please follow instructions to access to all functionalities of the app.</string>
    <string name="Information">Information</string>
    <string name="Send_mail">Send mail</string>
    <string name="email_reset_password_sent">An email to reset your password has been sent !</string>
    <string name="forgot_password_text">Enter your email and we will send instructions to change your password in your mailbox.</string>
    <string name="Reset_password">Reset password</string>
    <string name="Please_enter_a_valid_email">Please enter a valid email</string>
    <string name="Your_email">Your email :</string>
    <string name="Your_birthday">Your birthday :</string>
    <string name="Stats">Stats</string>
    <string name="Finished_drink">Finished drink</string>
    <string name="Given_drink">Given drink</string>
    <string name="Chat">Chat</string>
    <string name="Type_a_message">Type a message</string>
    <string name="Select_friends">Select friends</string>
    <string name="Add_friends">Add friends</string>
    <string name="Request_sent_to">Request sent to %1$s</string>
    <string name="placeholder_friend_request">%1$d pending requests</string>
    <string name="Friends_requests">Friends requests</string>
    <string name="Friend_request_accepted">Friend request accepted</string>
    <string name="Friend_request_declined">Friend request declined</string>
    <string name="You_dont_have_friends_requests">You don\'t have friends requests</string>
    <string name="Charts">Charts</string>
    <string name="Best_friends">Best friends</string>
    <string name="share_the_app">Share the app</string>
    <string name="Terms_and_conditions">Terms and conditions</string>
    <string name="Privacy_policy">Privacy policy</string>
    <string name="share_app_message">Join me on Foxy ! Download the app with this link : %1$s</string>
    <string name="What_do_you_want_to_do">What do you want to do ?</string>
    <string name="look_for_a_friend">Type your friend\'s name</string>
    <string name="Lobby">Lobby</string>
    <string name="No_friends_to_display">No friends to display</string>
    <string name="Find_user_by_username">You can find users by typing their username</string>
    <string name="play">Play</string>
    <string name="stop">Stop</string>
    <string name="audio">Audio</string>
    <string name="Edit_my_profile">Edit my profile</string>
    <string name="See_more_stats">See more stats</string>
    <string name="See_less_stats">See less stats</string>
    <string name="user_time">%1$s at %2$s</string>
    <string name="Message">Message (optional)</string>
    <string name="Top_songs_played">Top song played</string>
    <string name="Global">Global</string>
    <string name="Weekly">Weekly</string>
    <string name="Daily">Daily</string>
    <string name="loading">Loading…</string>
    <string name="No_data_to_display">No data to display, try to refresh</string>
    <string name="Score">Score : %1$d pts</string>
    <string name="Rate_the_app">Rate the app</string>
    <string name="No_points">No points</string>
    <string name="Unranked">Unranked</string>
    <string name="Time_to_upgrade">Time to upgrade</string>
    <string name="Upgrade">Upgrade</string>
    <string name="upgrade_long_text">Your current version is no longer supported. Please update the app to enjoy new features.</string>
    <string name="We_are_checking_the_version">We are checking the version of the app…</string>
    <string name="tuto_btn_nav">Tap to this button to display the menu.</string>
    <string name="tuto_btn_nav_desc">You can navigate between screens when you slide the screen or when you click on a button of this menu.</string>
    <string name="tuto_btn_record_your_own_voice">Or record your own voice !</string>
    <string name="tuto_btn_record_your_own_voice_desc">Your friends will receive this song as a notification.</string>
    <string name="tuto_list_songs">Select a sound by pressing and holding the item, you can play the sound by clicking to the "play button".</string>
    <string name="tuto_list_songs_desc">Your friends will receive this sound as a notification.</string>
    <string name="tuto_your_score">Here there is your score, updated for each notification sent.</string>
    <string name="tuto_your_score_desc">One notification sent = 1 new point</string>
    <string name="Rank">Rank :</string>
    <string name="tuto_your_badge">This is your badge associated to your rank</string>
    <string name="tuto_your_badge_desc">When you rank up, you can unlock new badges !</string>
    <string name="Select_a_sound">Select a sound</string>
    <string name="Use_a_registered_sound">Use a registered sound</string>
    <string name="Record_your_voice">Record your voice</string>
    <string name="Downloading">Downloading...</string>
    <string name="download_add_to_queue">The file has been added to the queue, it will be downloaded when you retrieve the internet.</string>
    <string name="tuto_button_record_voice">To record your voice, you have to press and hold the button. (5s maximum)</string>
    <string name="Add_an_optional_message">Add an optional message</string>
    <string name="number_characters_message">40 characters maximum</string>
</resources>
