<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient_blue">

    <android.support.constraint.Guideline
        android:id="@+id/signup_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="5dp" />

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:alpha="0.7"
        android:scaleType="centerCrop"
        android:src="@drawable/signup_background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signup_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Create_your_account"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/signup_login_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <EditText
        android:id="@+id/signup_first_name"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="4dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_white_round_corner"
        android:hint="@string/First_name"
        android:inputType="text"
        android:lines="1"
        android:padding="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDarkBlue"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/signup_surname"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <EditText
        android:id="@+id/signup_surname"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_white_round_corner"
        android:hint="@string/Last_name"
        android:inputType="text"
        android:lines="1"
        android:padding="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDarkBlue"
        android:textSize="14sp"
        app:layout_constraintLeft_toRightOf="@+id/signup_first_name"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_title" />

    <EditText
        android:id="@+id/signup_email"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_white_round_corner"
        android:hint="@string/Email"
        android:inputType="textEmailAddress"
        android:lines="1"
        android:padding="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDarkBlue"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_first_name" />

    <EditText
        android:id="@+id/signup_username"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/bg_white_round_corner"
        android:hint="@string/Username"
        android:inputType="text"
        android:lines="1"
        android:padding="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDarkBlue"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_email" />

    <TextView
        android:id="@+id/signup_birthday"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="13dp"
        android:background="@drawable/bg_white_round_corner"
        android:gravity="center_vertical"
        android:hint="@string/Birthday"
        android:padding="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDarkBlue"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_username" />

    <EditText
        android:id="@+id/signup_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/bg_white_round_corner"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDarkBlue"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_birthday" />

    <EditText
        android:id="@+id/signup_confirm_password"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_white_round_corner"
        android:hint="@string/Confirm_password"
        android:inputType="textPassword"
        android:lines="1"
        android:padding="8dp"
        android:paddingTop="8dp"
        android:textColor="@android:color/black"
        android:textColorHint="@color/colorDarkBlue"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_password" />

    <Button
        android:id="@+id/signup_register_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/bg_dark_blue_rect_oval_border"
        android:text="@string/Register"
        android:textAllCaps="false"
        android:textColor="@color/colorDarkBlue"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password" />

    <Button
        android:id="@+id/signup_login_button"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:background="@drawable/bg_dark_blue_rect_oval_border"
        android:text="@string/Login"
        android:textAllCaps="false"
        android:textColor="@color/colorDarkBlue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/signup_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:indeterminate="true"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/signup_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</android.support.constraint.ConstraintLayout>
